--- a/assets/app/views/browse/build.html
+++ b/assets/app/views/browse/build.html
@@ -49,7 +49,7 @@
               </span>
             </dd>
             <dt>Build configuration:</dt>
-            <dd><a href="project/{{build.metadata.namespace}}/browse/build/{{buildConfigName}}">{{buildConfigName}}</a>
+            <dd><a href="project/{{build.metadata.namespace}}/browse/builds/{{buildConfigName}}">{{buildConfigName}}</a>
             <dt>Build strategy:</dt>
             <dd>{{build.spec.strategy.type}}</dd>
             <dt>Builder image:</dt>
