--- a/assets/app/views/browse/deployment.html
+++ b/assets/app/views/browse/deployment.html
@@ -48,7 +48,7 @@
               </dd>
               <dt ng-if="isDeployment(deployment)">Deployment config:</dt>
               <dd ng-if="isDeployment(deployment)">
-                <a href="project/{{deployment.metadata.namespace}}/browse/deployment/{{deploymentConfigName}}">{{deploymentConfigName}}</a>
+                <a href="project/{{deployment.metadata.namespace}}/browse/deployments/{{deploymentConfigName}}">{{deploymentConfigName}}</a>
               </dd>
               <dt>Created:</dt>
               <dd>
