--- a/assets/app/views/services.html
+++ b/assets/app/views/services.html
@@ -19,7 +19,7 @@
         <tbody>
           <tr ng-if="(services | hashSize) == 0"><td colspan="6"><em>{{emptyMessage}}</em></td></tr>
           <tr ng-repeat="service in services | orderObjectsByDate : true">
-            <td><a href="project/{{projectName}}/browse/service/{{service.metadata.name}}">{{service.metadata.name}}</a></td>
+            <td><a href="project/{{projectName}}/browse/services/{{service.metadata.name}}">{{service.metadata.name}}</a></td>
             <td>{{service.spec.clusterIP}}</td>
             <td>
               <span ng-if="!service.status.loadBalancer.ingress.length"><em>none</em></span>
@@ -69,7 +69,7 @@
             <td>
               <span>{{route.spec.to.kind}}: </span>
               <span ng-if="route.spec.to.kind != 'Service'">{{route.spec.to.name}}</span>
-              <span ng-if="route.spec.to.kind == 'Service'"><a href="project/{{projectName}}/browse/service/{{route.spec.to.name}}">{{route.spec.to.name}}</a></span>
+              <span ng-if="route.spec.to.kind == 'Service'"><a href="project/{{projectName}}/browse/services/{{route.spec.to.name}}">{{route.spec.to.name}}</a></span>
             </td>
             <td><relative-timestamp timestamp="route.metadata.creationTimestamp" drop-suffix="true"></relative-timestamp></td>
           </tr>
