--- a/assets/app/views/images.html
+++ b/assets/app/views/images.html
@@ -18,7 +18,7 @@
         <tbody>
           <tr ng-if="(imageStreams | hashSize) == 0"><td colspan="4"><em>{{emptyMessage}}</em></td></tr>
           <tr ng-repeat="imageStream in imageStreams | orderObjectsByDate : true">
-            <td><a href="project/{{projectName}}/browse/image/{{imageStream.metadata.name}}">{{imageStream.metadata.name}}</a></td>
+            <td><a href="project/{{projectName}}/browse/images/{{imageStream.metadata.name}}">{{imageStream.metadata.name}}</a></td>
             <td>
               <span ng-if="!imageStream.status.dockerImageRepository && !imageStream.spec.dockerImageRepository"><em>unknown</em></span>
               <span ng-if="imageStream.status.dockerImageRepository || imageStream.spec.dockerImageRepository">{{imageStream.status.dockerImageRepository || imageStream.spec.dockerImageRepository}}</span>
