Add missing table-responsive classes

--- a/assets/app/views/browse/build-config.html
+++ b/assets/app/views/browse/build-config.html
@@ -136,7 +136,7 @@
         </div>
       </div>
     </div><!-- /buildConfig .tile -->
-    <div class="table-reponsive">
+    <div class="table-responsive">
       <table class="table table-bordered table-hover">
         <thead>
           <tr>
