--- a/assets/app/views/directives/header/project-header.html
+++ b/assets/app/views/directives/header/project-header.html
@@ -24,6 +24,13 @@
           <i class="fa fa-plus visible-xs-inline-block"></i><span class="hidden-xs">Add to project</span>
         </a>
       </div>
+      <!-- system status message -->
+      <div row flex class="navbar-flex-btn">
+        <a class="nav-item-iconic system-status project-action-btn" id="status" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span title="System Status" class="fa status-icon pficon-warning-triangle-o"></span>
+          <span class="status-issue">2 open issues</span>
+        </a>
+      </div>
     </div>
   </div> <!-- /navbar-project-menu -->
   <navbar-utility class="hidden-xs"></navbar-utility>
