--- a/assets/app/styles/_variables.less
+++ b/assets/app/styles/_variables.less
@@ -59,7 +59,7 @@
 @sidebar-os-color: #dbdada;
 @sidebar-os-active-bg: #383f47;
 @sidebar-os-active-color: lighten(@sidebar-os-color, 13%);
-@sidebar-os-border-color: #050505; // #1a1d21
+@sidebar-os-border-color: #050505;
 @sidebar-os-border-inset-color: rgba(255,255,255,.04);
 @sidebar-os-hover-bg: #3f4750;
 @sidebar-os-icon-color: rgba(200,200,200, .8);
@@ -87,6 +87,7 @@
 @scrollbar-track-inverse: @sidebar-os-border-color;
 @status-bg-color: #E6ECF1;
 @status-border-color: #BFCEDB;
+@system-status-bg: #F9DC9C;
 @tileHeadingIconFontSize: 33px;
 @tooltip-bg: #111;
 
