--- a/assets/app/views/directives/header/default-header.html
+++ b/assets/app/views/directives/header/default-header.html
@@ -1,18 +1,27 @@
 <nav class="navbar navbar-pf-alt" role="navigation">
-  <div class="navbar-header">
-    <!-- mobile nav menu -->
-    <div row flex class="navbar-flex-btn toggle-menu">
-      <button type="button" class="navbar-toggle project-action-btn ng-isolate-scope" data-toggle="collapse" data-target=".navbar-collapse-2">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+  <div row hawtio-extension name="nav-system-status">
+    <div class="navbar-header">
+      <!-- mobile nav menu -->
+      <div row flex class="navbar-flex-btn toggle-menu">
+        <button type="button" class="navbar-toggle project-action-btn ng-isolate-scope" data-toggle="collapse" data-target=".navbar-collapse-2">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <!-- JS click handler for #openshift-logo -->
+      <a class="navbar-brand" id="openshift-logo" href="./">
+        <div id="header-logo"></div>
+      </a>
     </div>
-    <!-- JS click handler for #openshift-logo -->
-    <a class="navbar-brand" id="openshift-logo" href="./">
-      <div id="header-logo"></div>
-    </a>
+    <!-- system status message -->
+    <div row flex class="navbar-flex-btn system-status-mobile">
+      <a class="nav-item-iconic system-status project-action-btn">
+        <span title="System Status - 2 open issues" class="fa status-icon pficon-warning-triangle-o"></span>
+        <span class="status-issue">2 open issues</span>
+      </a>
+    </div>
+    <navbar-utility class="collapse navbar-collapse"></navbar-utility>
   </div>
-  <navbar-utility class="collapse navbar-collapse"></navbar-utility>
 </nav>
